--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Mafia</title>
-  </head>
-  <body>
-    <div class="app" id="app">12</div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <title>Mafia</title>
+</head>
+
+<body>
+  <div class="app">
+    <header class="header">
+      <div class="container">
+        <div class="header-inner">
+          <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-list-item"><a href="#" class="nav-list-link">Харьков</a></li>
+              <li class="nav-list-item"><a href="#" class="nav-list-link">Рестораны</a></li>
+              <li class="nav-list-item"><a href="#" class="nav-list-link">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="logo">
+            <img src="https://mafia.ua/img/logo-white-mafia.svg" alt="mafia">
+          </div>
+          <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-list-item"><a href="#" class="nav-list-link">Вход</a></li>
+              <li class="nav-list-item"><a href="#" class="nav-list-link">Корзина</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <div class="sub-header">
+      <div class="container">
+        <div class="sub-header-inner">
+          <h1 class="sub-header-title">Пицца</h1>
+          <nav class="sub-header-nav">
+            <ul class="sub-header-list">
+              <li class="sub-header-item"><a href="#" class="sub-header-link"></a></li>
+              <li class="sub-header-item"><a href="#" class="sub-header-link"></a></li>
+              <li class="sub-header-item"><a href="#" class="sub-header-link"></a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <main class="main">
+<section class="main-section">
+        <ul class="card-list">
+          <li class="card-item">
+            <img src="" alt="q">
+            <h2 class="card-title"></h2>
+            <span class="card-weight"></span>
+            <p class="card-description"></p>
+            <strong class="card-price"></strong>
+            <button class="btn btn-buy"></button>
+          </li>
+          <li class="card-item">
+            <img src="" alt="q">
+            <h2 class="card-title"></h2>
+            <span class="card-weight"></span>
+            <p class="card-description"></p>
+            <strong class="card-price"></strong>
+            <button class="btn btn-buy"></button>
+          </li>
+          <li class="card-item">
+            <img src="" alt="q">
+            <h2 class="card-title"></h2>
+            <span class="card-weight"></span>
+            <p class="card-description"></p>
+            <strong class="card-price"></strong>
+            <button class="btn btn-buy"></button>
+          </li>
+          <li class="card-item">
+            <img src="" alt="q">
+            <h2 class="card-title"></h2>
+            <span class="card-weight"></span>
+            <p class="card-description"></p>
+            <strong class="card-price"></strong>
+            <button class="btn btn-buy"></button>
+          </li>
+          <li class="card-item">
+            <img src="" alt="q">
+            <h2 class="card-title"></h2>
+            <span class="card-weight"></span>
+            <p class="card-description"></p>
+            <strong class="card-price"></strong>
+            <button class="btn btn-buy"></button>
+          </li>
+          <li class="card-item">
+            <img src="" alt="q">
+            <h2 class="card-title"></h2>
+            <span class="card-weight"></span>
+            <p class="card-description"></p>
+            <strong class="card-price"></strong>
+            <button class="btn btn-buy"></button>
+          </li>
+        </ul>
+</section>
+      <section class="about-pizza">
+        <p class="about-pizza-description"></p>
+        <p class="about-pizza-description"></p>
+        <p class="about-pizza-description"></p>
+        <p class="about-pizza-description"></p>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="../src/images/logo-white-mafia.svg" alt="q">
+        <span class="footer-copy">© 2002 - 2020 MAFIA
+          <span>Все права защищены.</span>
+        </span>
+      </div>
+      <nav class="footer-nav">
+        <ul class="footer-menu">
+          <li class="menu-item"><a href="#" class="menu-link">Меню</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Рестораны</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Меню ресторана</a></li>
+        </ul>
+        <ul class="footer-menu">
+          <li class="menu-item"><a href="#" class="menu-link">Новости</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Бонусная программа</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Организация праздников</a></li>
+        </ul>
+        <ul class="footer-menu">
+          <li class="menu-item"><a href="#" class="menu-link">Франчайзи</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Договор публичной оферты</a></li>
+        </ul>
+        <div class="footer-social-icons">
+          <i></i>
+          <i></i>
+        </div>
+      </nav>
+    </footer>
+  </div>
+</body>
+
 </html>
-
-
