--- a/public/index.html
+++ b/public/index.html
@@ -10,182 +10,7 @@
 </head>
 
 <body>
-  <div class="app">
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <nav class="nav">
-            <ul class="nav-list">
-              <li class="nav-list-item"><a href="#" class="nav-list-link">Харьков</a></li>
-              <li class="nav-list-item"><a href="#" class="nav-list-link">Рестораны</a></li>
-              <li class="nav-list-item"><a href="#" class="nav-list-link">Контакты</a></li>
-            </ul>
-          </nav>
-          <div class="logo">
-            <img src="https://mafia.ua/img/logo-white-mafia.svg" alt="mafia">
-          </div>
-          <nav class="nav">
-            <ul class="nav-list">
-              <li class="nav-list-item"><a href="#" class="nav-list-link">Вход</a></li>
-              <li class="nav-list-item shopping-cart">
-                <span class="material-icons">shopping_basket</span>
-                <a href="#" class="nav-list-link">Корзина</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
-    <div class="sub-header">
-      <div class="container">
-        <div class="sub-header-inner">
-          <h1 class="sub-header-title">Пицца</h1>
-          <nav class="sub-header-nav">
-            <ul class="sub-header-list">
-              <li class="sub-header-item active"><a href="#" class="sub-header-link">Все</a></li>
-              <li class="sub-header-item"><a href="#" class="sub-header-link">Метровая пицца</a></li>
-              <li class="sub-header-item"><a href="#" class="sub-header-link">Круглая пицца</a></li>
-            </ul>
-          </nav>
-          <div class="sort">
-            Сортировать
-          </div>
-        </div>
-      </div>
-    </div>
-    <main class="main">
-      <section class="content">
-        <div class="container">
-          <ul class="card-list">
-            <li class="card-item">
-              <img src="https://mafia.ua/storage/editor/fotos/480x0/karibskaya-kruglaya_1592816076356.jpeg" alt="q">
-              <div class="card-content">
-                <h2 class="card-title">Карибская</h2>
-                <span class="card-weight">550 г</span>
-                <p class="card-description">
-                  Карбонара: ветчина, грудинка, сыр пармезан, шампиньоны, томаты черри и сливки Мясная Гурмео: филе куриное sous-vide, ветчина, колбаски охотничьи, пепперони, шампиньоны, лук, петрушка и соус BBQ Четыре сыра: сыр дор блю, сыр чеддер, сыр пармезан, груша, грецкий орех и сливочный соус Сырный бортик: сыр Филадельфия, сыр моцарелла
-                </p>
-                <strong class="card-price">199 грн</strong>
-                <button class="btn btn-buy">В корзину</button>
-              </div>
-            </li>
-            <li class="card-item">
-              <img src="https://mafia.ua/storage/editor/fotos/480x0/karibskaya-kruglaya_1592816076356.jpeg" alt="q">
-              <div class="card-content">
-                <h2 class="card-title">Карибская</h2>
-                <span class="card-weight">550 г</span>
-                <p class="card-description">
-                  Карбонара: ветчина, грудинка, сыр пармезан, шампиньоны, томаты черри и сливки Мясная Гурмео: филе куриное sous-vide, ветчина, колбаски охотничьи, пепперони, шампиньоны, лук, петрушка и соус BBQ Четыре сыра: сыр дор блю, сыр чеддер, сыр пармезан, груша, грецкий орех и сливочный соус Сырный бортик: сыр Филадельфия, сыр моцарелла
-                </p>
-                <strong class="card-price">199 грн</strong>
-                <button class="btn btn-buy">В корзину</button>
-              </div>
-            </li>
-            <li class="card-item">
-              <img src="https://mafia.ua/storage/editor/fotos/480x0/karibskaya-kruglaya_1592816076356.jpeg" alt="q">
-              <div class="card-content">
-                <h2 class="card-title">Карибская</h2>
-                <span class="card-weight">550 г</span>
-                <p class="card-description">
-                  Карбонара: ветчина, грудинка, сыр пармезан, шампиньоны, томаты черри и сливки Мясная Гурмео: филе куриное sous-vide, ветчина, колбаски охотничьи, пепперони, шампиньоны, лук, петрушка и соус BBQ Четыре сыра: сыр дор блю, сыр чеддер, сыр пармезан, груша, грецкий орех и сливочный соус Сырный бортик: сыр Филадельфия, сыр моцарелла
-                </p>
-                <strong class="card-price">199 грн</strong>
-                <button class="btn btn-buy">В корзину</button>
-              </div>
-            </li>
-            <li class="card-item">
-              <img src="https://mafia.ua/storage/editor/fotos/480x0/karibskaya-kruglaya_1592816076356.jpeg" alt="q">
-              <div class="card-content">
-                <h2 class="card-title">Карибская</h2>
-                <span class="card-weight">550 г</span>
-                <p class="card-description">
-                  Карбонара: ветчина, грудинка, сыр пармезан, шампиньоны, томаты черри и сливки Мясная Гурмео: филе куриное sous-vide, ветчина, колбаски охотничьи, пепперони, шампиньоны, лук, петрушка и соус BBQ Четыре сыра: сыр дор блю, сыр чеддер, сыр пармезан, груша, грецкий орех и сливочный соус Сырный бортик: сыр Филадельфия, сыр моцарелла
-                </p>
-                <strong class="card-price">199 грн</strong>
-                <button class="btn btn-buy">В корзину</button>
-              </div>
-            </li>
-            <li class="card-item">
-              <img src="https://mafia.ua/storage/editor/fotos/480x0/karibskaya-kruglaya_1592816076356.jpeg" alt="q">
-              <div class="card-content">
-                <h2 class="card-title">Карибская</h2>
-                <span class="card-weight">550 г</span>
-                <p class="card-description">
-                  Карбонара: ветчина, грудинка, сыр пармезан, шампиньоны, томаты черри и сливки Мясная Гурмео: филе куриное sous-vide, ветчина, колбаски охотничьи, пепперони, шампиньоны, лук, петрушка и соус BBQ Четыре сыра: сыр дор блю, сыр чеддер, сыр пармезан, груша, грецкий орех и сливочный соус Сырный бортик: сыр Филадельфия, сыр моцарелла
-                </p>
-                <strong class="card-price">199 грн</strong>
-                <button class="btn btn-buy">В корзину</button>
-              </div>
-            </li>
-            <li class="card-item">
-              <img src="https://mafia.ua/storage/editor/fotos/480x0/karibskaya-kruglaya_1592816076356.jpeg" alt="q">
-              <div class="card-content">
-                <h2 class="card-title">Карибская</h2>
-                <span class="card-weight">550 г</span>
-                <p class="card-description">
-                  Карбонара: ветчина, грудинка, сыр пармезан, шампиньоны, томаты черри и сливки Мясная Гурмео: филе куриное sous-vide, ветчина, колбаски охотничьи, пепперони, шампиньоны, лук, петрушка и соус BBQ Четыре сыра: сыр дор блю, сыр чеддер, сыр пармезан, груша, грецкий орех и сливочный соус Сырный бортик: сыр Филадельфия, сыр моцарелла
-                </p>
-                <strong class="card-price">199 грн</strong>
-                <button class="btn btn-buy">В корзину</button>
-              </div>
-            </li>
-          </ul>
-        </div>
-</section>
-      <section class="about-pizza">
-        <div class="container">
-          <p class="about-pizza-description">
-            Любите настоящую классическую итальянскую выпечку с начинкой, которую во всем мире называют Его Вкуснейшее Величество Пицца? Чтобы отведать кусочек свежайшей пиццы с хрустящей корочкой и вкуснейшей начинкой, на тонком или толстом корже, совершенно не обязательно ехать в Италию. Более того, кусочек солнечной и темпераментной Италии навсегда поселится в вашем сердце, если вы решите выбрать, заказать и купить пиццу в Харькове в местной сети ресторанов MAFIA.
-          </p>
-          <p class="about-pizza-description">
-            Попробовать настоящую итальянскую пиццу в Харькове стало еще проще! С сетью ресторанов MAFIA в Харькове сделать это в любое время легко и удобно – здесь предлагается любая свежайшая пицца с доставкой в Харькове. Широкий выбор блюд, представленный в меню, удовлетворит самых требовательных клиентов. Заказывайте популярные классические виды пиццы или фирменные новинки для любителей попробовать что-нибудь особенное. Для крупной компании с хорошим аппетитом, например, рекомендуем нашу гордость – самая большая пицца в Харькове готовится и продается у нас. Все блюда можно посмотреть на сайте mafia.ua, где уже по картинке можно понять состав блюда и узнать цену.
-          </p>
-          <p class="about-pizza-description">
-            Благодаря онлайн-заказу, насладиться пиццей можно, не выходя из дома. Доставка пиццы на дом в Харькове – это реальность, доступная всем. Каждый заказ выполняется быстро и может быть доставлен в любой район города. Заказать пиццу в Харькове онлайн проще простого! Нужно лишь выбрать понравившееся блюдо и оформить заказ. В кратчайшие сроки для подтверждения заказа с вами свяжется наш оператор, и отправится только что приготовленная пицца на дом в Харькове по указанному вами адресу, будь то квартира, офис или знаковая достопримечательность в городе (да-да, курьеру можно назначить встречу в легко узнаваемом месте).
-          </p>
-          <p class="about-pizza-description">
-            Сделать заказ на любое количество порций пиццы можно в любое время дня и ночи, ведь доставка пиццы по Харькову осуществляется практически круглосуточно — когда бы у вас не возникло желание вкусно пообедать или поужинать. Круглосуточная пицца в Харькове от MAFIA – это удобный и продуманный ресторанный сервис, который поможет жителям и гостям города решить вопрос питания и угощения в любое время суток.
-          </p>
-          <p class="about-pizza-description">
-            Вся продукция тщательно упакована и переносится в специальных контейнерах, что позволяет сохранять пиццу горячей. Будьте уверены, что заказ пиццы в Харькове от MAFIA доедет к вам куда угодно.
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-          <div class="footer-logo">
-            <img src="https://mafia.ua/img/logo-white-mafia.svg" alt="q">
-            <span class="footer-copy">© 2002 - 2020 MAFIA
-              <span>Все права защищены.</span>
-            </span>
-          </div>
-          <nav class="footer-nav">
-            <ul class="footer-menu">
-              <li class="menu-item"><a href="#" class="menu-link">Меню доставки</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Рестораны Харькова</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Меню ресторана</a></li>
-            </ul>
-            <ul class="footer-menu">
-              <li class="menu-item"><a href="#" class="menu-link">Новости</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Бонусная программа</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Организация праздников</a></li>
-            </ul>
-            <ul class="footer-menu">
-              <li class="menu-item"><a href="#" class="menu-link">Франчайзи</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Договор публичной оферты</a></li>
-            </ul>
-          </nav>
-          <div class="footer-social-icons">
-            <span class="material-icons social">
-              facebook
-              </span>
-              <span class="material-icons social">
-                offline_bolt
-                </span>
-          </div>
-    </footer>
-  </div>
+  <div class="app" id="app"></div>
 </body>
 
 </html>
